[metadata]
name = yahoo-auction-auto
version = attr: yahoo_auction_auto.__version__
author = Shuhei Nitta
author_email = huisintheta@gmail.com
url = https://github.com/huisint/yahoo-auction-auto
description = Automate tasks on Yahoo!Auction
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
test_suite = tests
install_requires =
    requests>=2.28.1
    beautifulsoup4>=4.11.1
    lxml>=4.9.1
    selenium>=4.3.0
    chromedriver-binary-auto>=0.1.2
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = 
    test*

[mypy]
python_version = 3.10
strict = True
ignore_missing_imports = True

[coverage:run]
omit =
    tests/*

[flake8]
max-line-length = 119
